--- a/templates/telephone_fixe/show.html.twig
+++ b/templates/telephone_fixe/show.html.twig
@@ -157,7 +157,7 @@
                                             </tr>
                                         {% endif %}
                                         <tr id="noResultsRow" class="align-middle text-center" style="display: none;">
-                                            <td colspan="13">Aucune téléphone fixe n'a été trouvé.</td>
+                                            <td colspan="13">Aucun téléphone fixe n'a été trouvé.</td>
                                         </tr>
                                     </tbody>
                                 </table>
